# thermal-network

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: installation.md  quickstart.md  quickstart.mdx
docs/src/content/docs/reference/: conversions.mdx  fitting.mdx  impedance.mdx  networks.mdx
examples/: excel_example.Numbers  excel_example.xlsx  validate_thermal_model.plecs  validate_thermal_model.plecs.autosave  validation.py
scrap/: unused.py
src/thermal_network/: __init__.py  conversions.py  fitting.py  impedance.py  networks.py
tests/: conftest.py  test_conversions.py  test_fitting.py
