[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-network"
version = "0.1.0"
authors = [
    { name="Erick Schulz", email="schulz@plexim.com" }
]
description = "A library for thermal network model identification, fitting and conversion."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "sympy",
    "jax",
    "jaxlib",
    "optax",
]

[project.urls]
Homepage = "https://github.com/erickschulz/thermal-network"
Issues = "https://github.com/erickschulz/thermal-network/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
